version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 10.4

** Microsoft calling conventions
Added support for Microsoft calling conventions __cdecl, __clrcall, __fastcall,
__stdcall, __thiscall, and __vectorcall.

** Updated GnuLib for gcc 11
Pulled a fix from upstream GnuLib to fix a compile error under gcc 11.


* Changes in Cdecl 10.3

** Deleted functions and conversion operators
Marking functions and conversion operators `= delete` is now supported.

** Improved or fixed error messages
Improved or fixed several error messages.


* Changes in Cdecl 10.2

** At most one of `virtual`, `final`, or `override`.
In C++, at most one of `virtual`, `final`, or `override` is now printed.

** Added `typedef` to help
`typedef` has been added to the "store" section of English help.

** Pointers to `union` members
Pointers to `union` members are now allowed.

** `using` forbids type
`using` declarations now correctly forbid names in the types on the right-hand
side:

    using U = void (*F)();              // illegal


* Changes in Cdecl 10.1

** More robust scoped name type checking
Scoped names' scope-types are now checked against previous declarations.  For
example, the second declaration's attempted use of N::C as a namespace is now
flagged as an error because it was previously declared as a class:

    c++decl> namespace N { class C; }
    c++decl> namespace N::C { class D; }
                       ^
    11: error: "N::C" was previously declared as a class:
    > namespace N { class C; }

** More C++ std types
Added types `std::chars_format`, `std::ctype_base::mask`, `std::ios_base`,
`std::ios_base::event`, `std::ios_base::event_callback`,
`std::ios_base::fmtflags`, `std::ios_base::Init`, `std::ios_base::iostate`,
`std::ios_base::openmode`, `std::ios_base::seekdir`, `std::launch`,