@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "August 21, 2021" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "August 23, 2021" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -1193,6 +1193,9 @@ and
 \f(CW__volatile__\fP.
 .IP \(bu
 GNU C's \f(CW__attribute__\fP syntax,
+but all attributes are ignored.
+.IP \(bu
+Microsoft C's \f(CW__declspec\fP syntax,
 but all attributes are ignored.
 .IP \(bu
 Microsoft C's calling conventions
