@@ -1,0 +1,4 @@
+explain struct __declspec(dllexport) S
+               ^
+16: warning: "__declspec" is not supported by cdecl (ignoring); did you mean [[...]]?
+define S as structure S
