@@ -1,0 +1,4 @@
+explain __declspec(dllexport) int i
+        ^
+9: warning: "__declspec" is not supported by cdecl (ignoring); did you mean [[...]]?
+declare i as int
