@@ -1,0 +1,4 @@
+explain __declspec(dllexport) struct S x
+        ^
+9: warning: "__declspec" is not supported by cdecl (ignoring); did you mean [[...]]?
+declare x as structure S
