@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int __declspec(dllexport) i @ 0
