@@ -1,0 +1,1 @@
+cdecl @ @ @ explain struct __declspec(dllexport) S @ 0
