@@ -1,0 +1,1 @@
+cdecl @ @ @ explain __declspec(dllexport) int i @ 0
