@@ -1,0 +1,1 @@
+cdecl @ @ @ explain __declspec(dllexport) struct S x @ 0
