@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int __declspec(selectany) *p @ 0
